$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.354 2006/05/31 19:34:57 fanf2 Exp $

Change log file for Exim from version 4.21
-------------------------------------------

Exim version 4.63
-----------------

SC/01 Use a glob alias rather than an array ref in eximstats generated
      parser. This improves both readability and performance.

SC/02 Collect SpamAssassin and rejection statistics in eximstats.
      Don't display local sender or destination tables in eximstats unless
      there is data to show.
      Added average volumes into the eximstats top table text output.

SC/03 Collect data on the number of addresses (recipients) as well
      as the number of messages in eximstats.

TF/01 Correct an error in the documentation for the redirect router. Exim
      does (usually) call initgroups() when daemonizing.

TF/02 Call initgroups() when dropping privilege in exim.c, so that Exim runs with
      consistent privilege compared to when running as a daemon.

TF/03 Note in the spec that $authenticated_id is not set for local
      submissions from trusted users.


Exim version 4.62
-----------------

TF/01 Fix the add_header change below (4.61 PH/55) which had a bug that (amongst
      other effects) broke the use of negated acl sub-conditions.

PH/01 ${readsocket now supports Internet domain sockets (modified John Jetmore
      patch).

PH/02 When tcp-wrappers is called from Exim, it returns only "deny" or "allow".
      "Deny" causes Exim to reject the incoming connection with a 554 error.
      Unfortunately, if there is a major crisis, such as a disk failure,
      tcp-wrappers gives "deny", whereas what one would like would be some
      kind of temporary error. A kludge has been added to help with this.
      Before calling hosts_ctl(), errno is set zero. If the result is "deny", a
      554 error is used if errno is still zero or contains ENOENT (which occurs
      if either of the /etc/hosts.{allow,deny} files is missing). Otherwise, a